<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ajcin.flashbackmusicteam16.NowPlayingFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/artistName"
        android:layout_centerHorizontal="true"
        android:text=""
        android:gravity="center_horizontal"
        android:textSize="22sp" />

    <Button
        android:id="@+id/upcoming_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="Upcoming Tracks" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text=""
        android:gravity="center_horizontal"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artistName"
        android:layout_centerHorizontal="true"
        android:text=""
        android:gravity="center_horizontal"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_play"
        android:layout_alignBottom="@+id/btn_play"
        android:layout_toEndOf="@+id/btn_play"
        android:text="@string/pause" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_play"
        android:layout_alignBottom="@+id/btn_play"
        android:layout_toStartOf="@+id/btn_play"
        android:text="@string/reset" />

    <Button
        android:id="@+id/btn_dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_reset"
        android:layout_below="@+id/btn_reset"
        android:text="@string/dislike" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_pause"
        android:layout_alignParentBottom="true"
        android:text="@string/favorite" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_favorite" />

    <TextView
        android:id="@+id/last_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time"
        android:layout_below="@id/time"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_reset"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="year,month,day,hour,minute" />

    <Button
        android:id="@+id/setTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_pause"
        android:layout_toEndOf="@+id/editText"
        android:text="Set Time" />

    <TextView
        android:id="@+id/UpcomingTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_marginStart="14dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/location"
        android:text="Upcoming Tracks:" />

    <TextView
        android:id="@+id/nextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/UpcomingTrack"
        android:layout_below="@+id/UpcomingTrack"
        android:layout_marginTop="16dp"
        android:text="No upcoming tracks" />

</RelativeLayout>
