<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_albums"
        android:icon="@drawable/ic_storage_black_24dp"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_songs"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/title_songs" />

    <item
        android:id="@+id/navigation_nowPlaying"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/title_nowPlaying" />
    <item
        android:id="@+id/navigation_flashbackMode"
        android:icon="@drawable/ic_flash_on_black_24dp"
        android:title="Vibe Mode" />

    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="Download Audio"
        />

</menu>
