...
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="?attr/colorPrimary">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/main_googlesigninbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:buttonSize="wide" />

            <TextView
...
